Armitage Changelog
==================

In Progress
---------
- Active console now gets higher priority when polling msf for output
- Improved team server responsiveness in high latency situations by 
  creating additional connections to server to balance messages over

12 Feb 13 (tested against msf 16438)
---------
- Fixed a corner case preventing the display of removed host labels 
  when connected to a team server.
- Fixed RPC call cache corruption in team server mode. This bug could 
  lead to some exploits defaulting to a shell payload when meterpreter 
  was a possibility.
- Slight optimization to some DB queries. I no longer pull unused
  fields making the query marginally faster. Team server is more
  efficient too as changes to unused fields won't force data (re)sync.
- Hosts -> Clear Database now clears host labels too.
- Added the ability to manage multiple team server instances through
  Armitage. Go to Armitage -> New Connection to connect to another
  server. A button bar will appear that allows you to switch active
  Armitage connections.
	- Credentials available across instances are pooled when using
 	  the [host] -> Login menu and the credential helper.
- Rewrote the event log management code in the team server
- Added nickname tab completion to event log. I feel like I'm writing
  an IRC client again.
- Hosts -> Clear Database now asks you to confirm the action.
- Hosts -> Import Hosts announces successful import to event log again.

23 Jan 13 (tested against msf 16351)
---------
- Added helpers to set EXE::Custom and EXE::Template options.
- Fixed a bug displaying a Windows 8 icon for Windows 2008 hosts
- Cleaned up Armitage -> SOCKS Proxy job management code. The code to
  check if a proxy server is up was deadlock prone. Removed it.
- Starting SOCKS Proxy module now opens a tab displaying the module
  start process. An event is posted to the event log too.
- Created an option helper to select credentials for SMBUser, SMBPass, 